Fix bug in CMake: source directory directly included in target
target_include_directories should specify different paths for the
build and install interfaces

--- a/cxx4/CMakeLists.txt
+++ b/cxx4/CMakeLists.txt
@@ -1,7 +1,4 @@
 ## This is a CMake file, part of Unidata's netcdf-cxx package.
-
-INCLUDE_DIRECTORIES(".")
-
 ###
 # Set up headers and sources
 ###
@@ -32,8 +29,11 @@ SET(ALL_TLL_LIBS ${ALL_TLL_LIBS} ${HDF5_C_LIBRARY_hdf5})
 SET(ALL_TLL_LIBS ${ALL_TLL_LIBS} ${EXTRA_DEPS} PARENT_SCOPE)
 
 ADD_LIBRARY(netcdf-cxx4 ${CXX_SOURCES})
-TARGET_INCLUDE_DIRECTORIES(netcdf-cxx4 PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-TARGET_LINK_LIBRARIES(netcdf-cxx4 ${ALL_TLL_LIBS})
+TARGET_INCLUDE_DIRECTORIES(netcdf-cxx4 PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:include>
+  )
+TARGET_LINK_LIBRARIES(netcdf-cxx4 PUBLIC ${ALL_TLL_LIBS})
 SET_TARGET_PROPERTIES(netcdf-cxx4 PROPERTIES
   VERSION ${NCXX_LIB_VERSION}
   SOVERSION ${NCXX_SO_VERSION}
@@ -49,6 +49,7 @@ INSTALL(
   )
 INSTALL(
   TARGETS netcdf-cxx4
+  EXPORT netcdf-cxx4Targets
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
